Add Search field for Stores List

--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -3,24 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StoreFragment">
+    tools:context=".StoreFragment"
+    >
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
+
+        <EditText
+            android:id="@+id/searchStore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search store..." />
 
         <android.support.v7.widget.RecyclerView
+            android:layout_below="@+id/searchStore"
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="12dp"
-            tools:context=".StoreFragment"
-            >
-        </android.support.v7.widget.RecyclerView>
-
-
-
+            android:padding="12dp"/>
 
     </RelativeLayout>
 
