--- a/app/src/main/res/layout/store_layout.xml
+++ b/app/src/main/res/layout/store_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/storeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
@@ -7,6 +8,9 @@
     android:focusable="true"
     android:orientation="vertical"
   >
+
+
+    <!--ADD IMAGE VIEW HERE...-->
 
     <TextView
         android:id="@+id/storeName"
